--- a/SC3006191SC3003221_P3/src/View/CadasJogador.fxml
+++ b/SC3006191SC3003221_P3/src/View/CadasJogador.fxml
@@ -4,18 +4,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="206.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.CadasJogador">
+<AnchorPane prefHeight="206.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerCadsJogador">
    <children>
-      <Button layoutX="202.0" layoutY="172.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="164.0" text="Salvar" />
-      <Label layoutX="16.0" layoutY="144.0" text="Idade do Jogador:" />
-      <Label layoutX="14.0" layoutY="110.0" prefHeight="17.0" prefWidth="105.0" text="Email de contato:" />
-      <Label layoutX="14.0" layoutY="76.0" text="Nome Personagem:" />
-      <Label layoutX="15.0" layoutY="45.0" text="Nome Jogador:" />
-      <TextField layoutX="123.0" layoutY="41.0" prefHeight="25.0" prefWidth="164.0" />
-      <TextField layoutX="123.0" layoutY="72.0" prefHeight="25.0" prefWidth="164.0" />
-      <TextField layoutX="123.0" layoutY="106.0" prefHeight="25.0" prefWidth="164.0" />
-      <TextField layoutX="123.0" layoutY="140.0" prefHeight="25.0" prefWidth="164.0" />
-      <Label layoutX="9.0" layoutY="14.0" text="Jogador:">
+      <Button layoutX="202.0" layoutY="172.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="164.0" text="Salvar" AnchorPane.bottomAnchor="9.0" AnchorPane.rightAnchor="6.0" />
+      <Label layoutX="16.0" layoutY="144.0" text="Idade do Jogador:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="144.0" />
+      <Label layoutX="14.0" layoutY="110.0" prefHeight="17.0" prefWidth="105.0" text="Email de contato:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="110.0" />
+      <Label layoutX="14.0" layoutY="76.0" text="Nome Personagem:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="76.0" />
+      <Label layoutX="15.0" layoutY="45.0" text="Nome Jogador:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="45.0" />
+      <TextField layoutX="123.0" layoutY="41.0" prefHeight="25.0" prefWidth="164.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="72.0" />
+      <TextField layoutX="123.0" layoutY="41.0" prefHeight="25.0" prefWidth="164.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="41.0" />
+      <TextField layoutX="123.0" layoutY="106.0" prefHeight="25.0" prefWidth="164.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="106.0" />
+      <TextField layoutX="123.0" layoutY="140.0" prefHeight="25.0" prefWidth="164.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="140.0" />
+      <Label layoutX="9.0" layoutY="14.0" text="Jogador:" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font name="Arial" size="24.0" />
          </font>
