--- a/SC3006191SC3003221_P3/src/View/CadasMesa.fxml
+++ b/SC3006191SC3003221_P3/src/View/CadasMesa.fxml
@@ -4,40 +4,40 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="277.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.CadasMesa">
+<AnchorPane prefHeight="277.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerCadasMesa">
    <children>
-      <Button layoutX="669.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" text="Enviar" />
-      <ComboBox layoutX="304.0" layoutY="55.0" prefWidth="150.0" />
-      <Separator layoutX="464.0" layoutY="-39.0" orientation="VERTICAL" prefHeight="316.0" prefWidth="8.0" />
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="32.0" prefWidth="133.0" text="Campanha:">
+      <Button layoutX="669.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" text="Enviar" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+      <ComboBox layoutX="304.0" layoutY="55.0" prefWidth="150.0" AnchorPane.leftAnchor="304.0" AnchorPane.topAnchor="55.0" />
+      <Separator layoutX="464.0" layoutY="-39.0" orientation="VERTICAL" prefHeight="316.0" prefWidth="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="32.0" prefWidth="133.0" text="Campanha:" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font name="Arial" size="24.0" />
          </font></Label>
-      <TextField layoutX="76.0" layoutY="55.0" prefHeight="25.0" prefWidth="182.0" />
-      <TextArea layoutX="74.0" layoutY="100.0" prefHeight="78.0" prefWidth="378.0" />
-      <TextField layoutX="388.0" layoutY="222.0" prefHeight="25.0" prefWidth="67.0" />
-      <Label layoutX="19.0" layoutY="131.0" text="Descrição:" />
-      <Label layoutX="21.0" layoutY="59.0" text="Nome:" />
-      <Label layoutX="268.0" layoutY="59.0" text="Tipo:" />
-      <Label layoutX="268.0" layoutY="226.0" text="Quantidade de Dados:" />
-      <CheckBox layoutX="67.0" layoutY="217.0" mnemonicParsing="false" text="D4" />
-      <CheckBox layoutX="146.0" layoutY="238.0" mnemonicParsing="false" text="D10" />
-      <CheckBox layoutX="67.0" layoutY="238.0" mnemonicParsing="false" text="D8" />
-      <CheckBox layoutX="214.0" layoutY="217.0" mnemonicParsing="false" text="D20" />
-      <CheckBox layoutX="214.0" layoutY="238.0" mnemonicParsing="false" text="D12" />
-      <CheckBox layoutX="146.0" layoutY="217.0" mnemonicParsing="false" text="D6" />
-      <Label layoutX="21.0" layoutY="194.0" text="Tipos de dados usado:" />
-      <Label layoutX="488.0" layoutY="59.0" text="Nome do Mestre:" />
-      <Label layoutX="488.0" layoutY="94.0" text="Email mestre:" />
-      <TextField layoutX="601.0" layoutY="55.0" prefHeight="25.0" prefWidth="174.0" />
-      <TextField layoutX="601.0" layoutY="90.0" prefHeight="25.0" prefWidth="174.0" />
-      <TextField layoutX="601.0" layoutY="123.0" prefHeight="25.0" prefWidth="174.0" />
-      <TextField layoutX="601.0" layoutY="161.0" prefHeight="25.0" prefWidth="174.0" />
-      <DatePicker layoutX="601.0" layoutY="198.0" />
-      <Label layoutX="486.0" layoutY="127.0" text="Limte de Jogadores:" />
-      <Label layoutX="485.0" layoutY="165.0" text="Faixa Etária:" />
-      <Label layoutX="488.0" layoutY="202.0" text="Data da Mesa:" />
-      <Label layoutX="483.0" layoutY="17.0" text="Mesa:">
+      <TextField layoutX="76.0" layoutY="55.0" prefHeight="25.0" prefWidth="182.0" AnchorPane.leftAnchor="76.0" AnchorPane.topAnchor="55.0" />
+      <TextArea layoutX="74.0" layoutY="100.0" prefHeight="78.0" prefWidth="378.0" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="100.0" />
+      <TextField layoutX="388.0" layoutY="222.0" prefHeight="25.0" prefWidth="67.0" AnchorPane.leftAnchor="388.0" AnchorPane.topAnchor="222.0" />
+      <Label layoutX="19.0" layoutY="131.0" text="Descrição:" AnchorPane.leftAnchor="19.0" AnchorPane.topAnchor="131.0" />
+      <Label layoutX="21.0" layoutY="59.0" text="Nome:" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="59.0" />
+      <Label layoutX="268.0" layoutY="59.0" text="Tipo:" AnchorPane.leftAnchor="268.0" AnchorPane.topAnchor="59.0" />
+      <Label layoutX="268.0" layoutY="226.0" text="Quantidade de Dados:" AnchorPane.leftAnchor="268.0" AnchorPane.topAnchor="226.0" />
+      <CheckBox layoutX="67.0" layoutY="217.0" mnemonicParsing="false" text="D4" AnchorPane.leftAnchor="67.0" AnchorPane.topAnchor="217.0" />
+      <CheckBox layoutX="146.0" layoutY="238.0" mnemonicParsing="false" text="D10" AnchorPane.leftAnchor="146.0" AnchorPane.topAnchor="238.0" />
+      <CheckBox layoutX="67.0" layoutY="238.0" mnemonicParsing="false" text="D8" AnchorPane.leftAnchor="67.0" AnchorPane.topAnchor="238.0" />
+      <CheckBox layoutX="214.0" layoutY="217.0" mnemonicParsing="false" text="D20" AnchorPane.leftAnchor="214.0" AnchorPane.topAnchor="217.0" />
+      <CheckBox layoutX="214.0" layoutY="238.0" mnemonicParsing="false" text="D12" AnchorPane.leftAnchor="214.0" AnchorPane.topAnchor="238.0" />
+      <CheckBox layoutX="146.0" layoutY="217.0" mnemonicParsing="false" text="D6" AnchorPane.leftAnchor="146.0" AnchorPane.topAnchor="217.0" />
+      <Label layoutX="21.0" layoutY="194.0" text="Tipos de dados usado:" AnchorPane.leftAnchor="19.0" AnchorPane.topAnchor="194.0" />
+      <Label layoutX="488.0" layoutY="59.0" text="Nome do Mestre:" AnchorPane.rightAnchor="231.0" AnchorPane.topAnchor="59.0" />
+      <Label layoutX="488.0" layoutY="94.0" text="Email mestre:" AnchorPane.rightAnchor="253.0" AnchorPane.topAnchor="94.0" />
+      <TextField layoutX="601.0" layoutY="55.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="55.0" />
+      <TextField layoutX="601.0" layoutY="90.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="90.0" />
+      <TextField layoutX="601.0" layoutY="123.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="123.0" />
+      <TextField layoutX="601.0" layoutY="161.0" prefHeight="25.0" prefWidth="174.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="161.0" />
+      <DatePicker layoutX="601.0" layoutY="198.0" AnchorPane.rightAnchor="37.0" AnchorPane.topAnchor="198.0" />
+      <Label layoutX="486.0" layoutY="127.0" text="Limte de Jogadores:" AnchorPane.rightAnchor="220.0" AnchorPane.topAnchor="127.0" />
+      <Label layoutX="485.0" layoutY="165.0" text="Faixa Etária:" AnchorPane.rightAnchor="265.0" AnchorPane.topAnchor="165.0" />
+      <Label layoutX="488.0" layoutY="202.0" text="Data da Mesa:" AnchorPane.rightAnchor="248.0" AnchorPane.topAnchor="202.0" />
+      <Label layoutX="483.0" layoutY="17.0" text="Mesa:" AnchorPane.rightAnchor="263.0" AnchorPane.topAnchor="17.0">
          <font>
             <Font name="Arial" size="24.0" />
          </font>
