--- a/SC3006191SC3003221_P3/src/View/ListarJogadores.fxml
+++ b/SC3006191SC3003221_P3/src/View/ListarJogadores.fxml
@@ -4,14 +4,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.ListarJogadores">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerListarJogares">
    <children>
-      <Button layoutX="473.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Voltar" />
-      <Button layoutX="24.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Adicionar" />
-      <Button layoutX="173.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Deletar" />
-      <Button layoutX="99.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Editar" />
-      <TableView layoutX="14.0" layoutY="58.0" prefHeight="266.0" prefWidth="577.0">
+      <Button layoutX="473.0" layoutY="361.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Voltar" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="18.0" />
+      <Button layoutX="24.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Adicionar" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="24.0" />
+      <Button layoutX="173.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Deletar" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="173.0" />
+      <Button layoutX="99.0" layoutY="349.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="67.0" text="Editar" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="99.0" />
+      <TableView layoutX="14.0" layoutY="58.0" prefHeight="266.0" prefWidth="577.0" AnchorPane.bottomAnchor="76.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="58.0">
         <columns>
           <TableColumn prefWidth="152.0" text="Nome do Jogador" />
           <TableColumn prefWidth="175.0" text="Nome do Personagem" />
@@ -19,12 +18,12 @@
             <TableColumn prefWidth="89.0" text="Idade" />
         </columns>
       </TableView>
-      <Label layoutX="77.0" layoutY="14.0" text="Jogadores da Mesa:">
+      <Label layoutX="77.0" layoutY="14.0" text="Jogadores da Mesa:" AnchorPane.leftAnchor="77.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <Label layoutX="296.0" layoutY="14.0" prefHeight="36.0" prefWidth="219.0">
+      <Label layoutX="296.0" layoutY="14.0" prefHeight="36.0" prefWidth="219.0" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font size="25.0" />
          </font>
